サークル一覧大幅改修

--- a/public/assets/css/circle.css
+++ b/public/assets/css/circle.css
@@ -1,32 +1,54 @@
 .circle-list{
     display: flex;
     justify-content: space-between;
-    width: 80%;
+    width: 100%;
     /* float: left; */
     flex-flow: row wrap;
+    margin-right:0;
 }
 .each-circle{
     border: 1px #999 solid;
     padding: 10px;
     margin-bottom: 30px;
     font-family: "makinas-4-square";
+    width: 48%;
 }
 .circle-main{
     position: relative;
-    padding: 70px 10%;
-    font-weight: 400;
+    width:65%;
     font-family: "makinas-4-square";
-    color: white;
-}
-.circle-images{
-    display: block;
-    max-width: 300px;
-    margin: 0 auto;
+    margin:0 auto;
+    margin-top:60px;
 }
 .circle-img{
-    max-width: 300px;
+    max-width: 126px;
 }
-.meta-button{
+
+.circle_p_name{
+    margin-bottom: 20px;
+    position: relative;
+    border: #da3e50 solid;
+    border-width: 0 0 1px 45px;
+    color: #fff;
+    line-height: 45px;
+    font-size: 1rem;
+    font-weight: 400;
+    display:flex;
+    padding-left: 8px;
+}
+.each-circle h3 span{
+    position: absolute;
+    width: 45px;
+    left: -45px;
+    line-height: 45px;
+    text-align: center;
+    font-weight: 700;
+    color: #fff;
+    display: inline-block;
+    background: #da3e50;
+}
+
+/* .meta-button{
     display: block;
     font-size: 1.2rem;
     color: unset;
@@ -35,8 +57,8 @@
     border-radius: 15px;
     padding: 10px;
     font-family: "makinas-4-square";
-}
-.circle-location .meta-loc{
+} */
+/* .circle-location .meta-loc{
     display: block;
     margin-right: 40px;
     font-size: 1.5rem;
@@ -53,9 +75,56 @@
     justify-content: center;
     align-items: center;
     font-family: "makinas-4-square";
-}
+} */
 .circle-text{
     margin: 10px 0;
     font-family: "makinas-4-square";
     margin:0 auto;
+}
+.circle-bot{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    list-style: none;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+.booth-detail{
+    width: 66%;
+}
+.circle-ul{
+    position: relative;
+    padding-top: 30px;
+}
+.circle-member{
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 1px #e0e0e0 solid;
+    color: #e0e0e0;
+    font-size: 1.3rem;
+    padding: 0 5px;
+    margin-bottom:10px;
+}
+.member-name{
+    color:white;
+    margin-top:20px;
+    margin-left:25px;
+}
+.daiya{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 65px;
+    left: 8px;
+    background: #666;
+    width: 6px;
+    height: 6px;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
 }
