--- a/views/circle.erb
+++ b/views/circle.erb
@@ -1,139 +1,369 @@
 <div class="title-main">
     <img src="/assets/images/titles/circles.webp" class="title-img">
 </div>
+<div class="circle-main">
     <ul class="circle-list">
         <li class="each-circle">
-            <h3 class="circle_p_name">PC同好会
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span>D-1</span>PC同好会
             </h3>
-            <a href="/pcdoukoukai"></a>
-        </li>
-        <li class="circle-name">
-            <h3 class="circle_p_name">物理部
-            <span>
-            </span>
-            </h3>
-            <a href="/buturibu"><img src="/assets/images/circle/buturi.png" class="circle-img"></a>
+            <div class="circle-bot">
+            <p>
+              <a href="/pcdoukoukai"><img src="/assets/images/circle/pc.png" class="circle-img"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name">pc同好会一同</p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">生物部
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>物理部
             </h3>
-            <a href="/seibutubu">bbbbb</a>
+            <div class="circle-bot">
+            <p>
+              <a href="/buturibu"><img src="/assets/images/circle/buturi.png" class="circle-img"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">化学部
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>生物部
             </h3>
-            <a href="/kagakubu"><img src="/assets/images/circle/IMG_8290.jpg" class="circle-img"></a>
+            <div class="circle-bot">
+            <p>
+              <a href="/seibutubu">bbbbb</a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">地歴部
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>化学部
             </h3>
-            <a href="/tirekibu">bbbbb</a>
+            <div class="circle-bot">
+            <p>
+              <a href="/kagakubu"><img src="/assets/images/circle/IMG_8290.jpg" class="circle-img"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">天文部
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>地歴部
             </h3>
-            <a href="/tennmonnbu">bbbbb</a>
+            <div class="circle-bot">
+            <p>
+              <a href="/tirekibu">bbbbb</a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">将棋部
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>天文部
             </h3>
-            <a href="/shougibu"><img src="/assets/images/circle/shougi.png" class="circle-img"></a>
+            <div class="circle-bot">
+            <p>
+              <a href="/tennmonnbu">bbbbb</a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">美術部
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>将棋部
             </h3>
-            <a href="/bizyutubu">bbbbb</a>
+            <div class="circle-bot">
+            <p>
+              <a href="/shougibu"><img src="/assets/images/circle/shougi.png" class="circle-img"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">アンサンブル部
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>美術部
             </h3>
-            <a href="/annsannburubu"><img src="/assets/images/circle/annsannburu.png" class="circle-img"></a>
+            <div class="circle-bot">
+            <p>
+              <a href="/bizyutubu">bbbbb</a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">ESS部
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>アンサンブル部
             </h3>
-            <a href="/essbu">bbbbb <img src="/assets/images/circle/ess.png" class="circle-img"></a>
+            <div class="circle-bot">
+            <p>
+              <a href="/annsannburubu"><img src="/assets/images/circle/annsannburu.png" class="circle-img"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">写真部
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>ESS部
             </h3>
-            <a href="/shasinnbu">bbbbb</a>
+            <div class="circle-bot">
+            <p>
+              <a href="/essbu">bbbbb <img src="/assets/images/circle/ess.png" class="circle-img"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">文芸部＆図書委員
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>写真部
             </h3>
-            <a href="/bunngeibutosho"><img src="/assets/images/circle/bunngeitosho.png" class="circle-img"></a>
+            <div class="circle-bot">
+            <p>
+              <a href="/shasinnbu">bbbbb</a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">数学同好会
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>文芸部＆図書委員
             </h3>
-            <a href="/sugakudoukoukai"><img src="/assets/images/circle/suugaku.png" class="circle-img"></a>
+            <div class="circle-bot">
+            <p>
+              <a href="/bunngeibutosho"><img src="/assets/images/circle/bunngeitosho.png" class="circle-img"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">軽音同好会
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>数学同好会
             </h3>
-            <a href="/keionndoukoukai"></a>
+            <div class="circle-bot">
+            <p>
+              <a href="/sugakudoukoukai"><img src="/assets/images/circle/suugaku.png" class="circle-img"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">奇術同好会
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>軽音同好会
             </h3>
-            <a href="/kizyutudoukoukai"><img src="/assets/images/circle/kizyutu.png" class="circle-img"></a>
+            <div class="circle-bot">
+            <p>
+              <a href="/keionndoukoukai"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">鉄道同好会
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>奇術同好会
             </h3>
-            <a href="/tetudoudoukoukai">bbbbb</a>
-        </li>
+            <div class="circle-bot">
+            <p>
+              <a href="/kizyutudoukoukai"><img src="/assets/images/circle/kizyutu.png" class="circle-img"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-            <h3 class="circle_p_name">スプラ同好会
-            <span>
-            </span>
+            <h3 class="circle_p_name"><span></span>鉄道同好会
             </h3>
-            <a href="/supuradoukoukai">bbbbb</a>
+            <div class="circle-bot">
+            <p>
+              <a href="/tetudoudoukoukai">bbbbb</a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
+        </li>
         </li>
         <li class="each-circle">
-        <h3 class="circle_p_nam
-        e">旅行同好会<span>
-        </span>
-        </h3>
-        <a href="/ryokoudoukoukai"><img src="/assets/images/circle/ryokou.png" class="circle-img"></a>
+            <h3 class="circle_p_name"><span></span>スプラ同好会
+            </h3>
+            <div class="circle-bot">
+            <p>
+              <a href="/supuradoukoukai">bbbbb</a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
         <li class="each-circle">
-        <h3 class="circle_p_na
-        me">高校入試<span>
-        </span>
-        </h3>
-        <a href="/koukounyuusi"><img src="/assets/images/circle/koukounyuusi.png" class="circle-img"></a>
+            <h3 class="circle_p_name"><span></span>旅
+            </h3>
+            <div class="circle-bot">
+            <p>
+              <a href="/ryokoudoukoukai"><img src="/assets/images/circle/ryokou.png" class="circle-img"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name"><span></span>
+            </h3>
+            <div class="circle-bot">
+            <p>
+              <a href="/koukounyuusi"><img src="/assets/images/circle/koukounyuusi.png" class="circle-img"></a>
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name"></p>
+              </li>
+            </ul>
+            </div>
+            </div>
         </li>
     </ul>
+</div>
