トップページの編集

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,13 +10,20 @@
     </script>
     <script src="/assets/javascript/javascript.js"></script>
     <div id="wrapper">
+      <div class="toptitle">
+        <span class="seventy-six">第76回</span>
+        <span class="school-name">甲陽学院高等学校</span>
+        <span class="event-title">「音楽と展覧の会」</span>
+        <span class="event-theme">" New ERA "</span>
+      </div>
       <div class="image">
-      <img src="/assets/images/logo.png" class="logo">
-    </div>
+        <img src="/assets/images/logo_white.webp" class="logo">
+        <img src="/assets/images/logo_background.gif" class="logo-gif">
+      </div>
       <%# <div id="particles-js">
       </div> %>
       <%# <script src="/assets/javascript/particles.js"></script> %>
-      </div>
+    </div>
 <div class="index-main">
     <div class="date">
      <p class="main-date">9.23</p>
