--- a/views/layout.erb
+++ b/views/layout.erb
@@ -45,16 +45,16 @@
             <div id="footer-title">第76回 音楽と展覧の会 "NewERA"</div>
             <div class="footer-icon">
                 <a class="icon"><i class="fab fa-twitter fa-4x snsicon" href="https://x.com/koyo_onten2023?s=20"></i>
-                <span class="sns-link-text">@koyo_onten2023</span>
+                  <span class="sns-link-text">@koyo_onten2023</span>
                 </a>
-                <a class="icon"><i class="fab fa-instagram fa-4x snsicon"></i>
-                <span class="sns-link-text">koyo.school.fes2023</span>
+                <a class="icon"><i class="fab fa-instagram fa-4x snsicon" href=""></i>
+                  <span class="sns-link-text">koyo.school.fes2023</span>
                 </a>
             </div>
             <div class="copy-right">
               ©2023 甲陽PC同好会
             </div>
-            </footer>  
+        </footer>  
         </div>
       </body>
       
