--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -47,31 +47,99 @@ html,body{
     
     .count-particles{ background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; } .js-count-particles{ font-size: 1.1em; } #stats, .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
 
-.logo{
-  height: 30rem;
-  width: 60rem;
-  margin:0 auto;
-}
 
-.image{
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  height: 30rem;
-  width: 60rem;
-  z-index:10;
-}
 #wrapper{
   position:relative;
   width:100%;
   height: 40rem;
 }
 
+.toptitle{
+  height: 250px;
+  margin: 0 auto;
+  padding-top: 10px;
+  font-weight: 700;
+  color: #fff;
+  text-align: justify;
+  width:70%;
+  text-align-last: justify;
+  
+}
 
+.seventy-six{
+  display: block;
+  padding: 0 41%;
+  line-height: 6vh;
+  margin: 0 auto;
+  font-family: "makinas-4-square";
+  font-size: 37px;
+  margin-top: 4px;
+}
 
+.school-name{
+  display: block;
+  padding: 0 27%;
+  line-height: 6vh;
+  margin: 0 auto;
+  font-family: "makinas-4-square";
+  font-size: 40px;
+  margin-top:4px;
+
+}
+
+.event-title{
+  display: block;
+  padding: 0 32%;
+  line-height: 6vh;
+  margin: 0 auto;
+  font-family: "makinas-4-square";
+  font-size: 40px;
+  margin-top: 4px;
+}
+
+.event-theme{
+  display: block;
+  padding: 0 39%;
+  line-height: 6vh;
+  margin: 0 auto;
+  font-weight: 900;
+  font-family: "makinas-4-square";
+  font-size: 45px;
+  margin-top: 6px;
+}
+
+.image{
+  position: relative;
+  right: 0;
+  bottom: 0;
+  left: 0; 
+  margin: auto;
+  height: 30rem;
+  width: 60rem;
+  z-index:10;
+  margin-top: 10px;
+}
+.logo{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0; 
+  height: 30rem;
+  width: 60rem;
+  margin:0 auto;
+  z-index: 12;
+}
+.logo-gif{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0; 
+  margin: auto;
+  height: 30rem;
+  width: 60rem;
+  margin:0 auto;
+  z-index: 11;
+}
 #display_content {
   width: 100%;
 }
