--- a/views/circle.erb
+++ b/views/circle.erb
@@ -3,12 +3,12 @@
 </div>
 <div class="circle-main">
     <ul class="circle-list">
-        <li class="each-circle">
+        <a href="/pcdoukoukai"><li class="each-circle">
             <h3 class="circle_p_name"><span>D-1</span>PC同好会
             </h3>
             <div class="circle-bot">
             <p>
-              <a href="/pcdoukoukai"><img src="/assets/images/circle/pc.png" class="circle-img"></a>
+              <img src="/assets/images/circle/pc.png" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -22,7 +22,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>物理部
             </h3>
             <div class="circle-bot">
@@ -41,7 +42,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>生物部
             </h3>
             <div class="circle-bot">
@@ -60,7 +62,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>化学部
             </h3>
             <div class="circle-bot">
@@ -79,7 +82,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>地歴部
             </h3>
             <div class="circle-bot">
@@ -98,7 +102,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>天文部
             </h3>
             <div class="circle-bot">
@@ -117,7 +122,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>将棋部
             </h3>
             <div class="circle-bot">
@@ -136,7 +142,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>美術部
             </h3>
             <div class="circle-bot">
@@ -155,7 +162,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>アンサンブル部
             </h3>
             <div class="circle-bot">
@@ -174,7 +182,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>ESS部
             </h3>
             <div class="circle-bot">
@@ -193,7 +202,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>写真部
             </h3>
             <div class="circle-bot">
@@ -212,7 +222,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>文芸部＆図書委員
             </h3>
             <div class="circle-bot">
@@ -231,7 +242,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>数学同好会
             </h3>
             <div class="circle-bot">
@@ -250,7 +262,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>軽音同好会
             </h3>
             <div class="circle-bot">
@@ -269,7 +282,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>奇術同好会
             </h3>
             <div class="circle-bot">
@@ -288,7 +302,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>鉄道同好会
             </h3>
             <div class="circle-bot">
@@ -307,8 +322,9 @@
             </div>
             </div>
         </li>
+        </a>
         </li>
-        <li class="each-circle">
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>スプラ同好会
             </h3>
             <div class="circle-bot">
@@ -327,7 +343,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>旅
             </h3>
             <div class="circle-bot">
@@ -346,7 +363,8 @@
             </div>
             </div>
         </li>
-        <li class="each-circle">
+        </a>
+        <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>
             </h3>
             <div class="circle-bot">
@@ -365,5 +383,6 @@
             </div>
             </div>
         </li>
+        </a>
     </ul>
 </div>
