--- a/views/circle.erb
+++ b/views/circle.erb
@@ -23,12 +23,12 @@
             </div>
         </li>
         </a>
-        <a href=""><li class="each-circle">
-            <h3 class="circle_p_name"><span></span>物理部
+        <a href="/pcdoukoukai"><li class="each-circle">
+            <h3 class="circle_p_name"><span>D-1</span>PC同好会
             </h3>
             <div class="circle-bot">
             <p>
-              <a href="/buturibu"><img src="/assets/images/circle/buturi.png" class="circle-img"></a>
+              <img src="/assets/images/circle/pc.png" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -36,14 +36,155 @@
                 サークルメンバー
               </div>
               <li>
-                <p class="daiya"></p><p class="member-name"></p>
+                <p class="daiya"></p><p class="member-name">pc同好会一同</p>
               </li>
             </ul>
             </div>
             </div>
         </li>
         </a>
-        <a href=""><li class="each-circle">
+        <a href="/ongakukai"><li class="each-circle">
+            <h3 class="circle_p_name"><span>D-1</span>音楽会
+            </h3>
+            <div class="circle-bot">
+            <p>
+              <img src="/assets/images/circle/ongakukai.jpg" class="circle-img">
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name">全員</p>
+              </li>
+            </ul>
+            </div>
+            </div>
+        </li>
+        </a>
+        <a href="/pcdoukoukai"><li class="each-circle">
+            <h3 class="circle_p_name"><span>D-1</span>PC同好会
+            </h3>
+            <div class="circle-bot">
+            <p>
+              <img src="/assets/images/circle/pc.png" class="circle-img">
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name">pc同好会一同</p>
+              </li>
+            </ul>
+            </div>
+            </div>
+        </li>
+        </a>
+        <a href="/pcdoukoukai"><li class="each-circle">
+            <h3 class="circle_p_name"><span>D-1</span>PC同好会
+            </h3>
+            <div class="circle-bot">
+            <p>
+              <img src="/assets/images/circle/pc.png" class="circle-img">
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name">pc同好会一同</p>
+              </li>
+            </ul>
+            </div>
+            </div>
+        </li>
+        </a>
+        <a href="/pcdoukoukai"><li class="each-circle">
+            <h3 class="circle_p_name"><span>D-1</span>PC同好会
+            </h3>
+            <div class="circle-bot">
+            <p>
+              <img src="/assets/images/circle/pc.png" class="circle-img">
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name">pc同好会一同</p>
+              </li>
+            </ul>
+            </div>
+            </div>
+        </li>
+        </a>
+        <a href="/pcdoukoukai"><li class="each-circle">
+            <h3 class="circle_p_name"><span>D-1</span>PC同好会
+            </h3>
+            <div class="circle-bot">
+            <p>
+              <img src="/assets/images/circle/pc.png" class="circle-img">
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name">pc同好会一同</p>
+              </li>
+            </ul>
+            </div>
+            </div>
+        </li>
+        </a>
+        <a href="/pcdoukoukai"><li class="each-circle">
+            <h3 class="circle_p_name"><span>D-1</span>PC同好会
+            </h3>
+            <div class="circle-bot">
+            <p>
+              <img src="/assets/images/circle/pc.png" class="circle-img">
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name">pc同好会一同</p>
+              </li>
+            </ul>
+            </div>
+            </div>
+        </li>
+        </a>
+        <a href="/pcdoukoukai"><li class="each-circle">
+            <h3 class="circle_p_name"><span>D-1</span>PC同好会
+            </h3>
+            <div class="circle-bot">
+            <p>
+              <img src="/assets/images/circle/pc.png" class="circle-img">
+            </p>
+            <div class="booth-detail">
+            <ul class="circle-ul">
+              <div class="circle-member">
+                サークルメンバー
+              </div>
+              <li>
+                <p class="daiya"></p><p class="member-name">pc同好会一同</p>
+              </li>
+            </ul>
+            </div>
+            </div>
+        </li>
+        </a>
+        
+        <%# <a href=""><li class="each-circle">
             <h3 class="circle_p_name"><span></span>生物部
             </h3>
             <div class="circle-bot">
@@ -383,6 +524,6 @@
             </div>
             </div>
         </li>
-        </a>
+        </a> %>
     </ul>
 </div>
