--- a/public/assets/css/circle.css
+++ b/public/assets/css/circle.css
@@ -11,7 +11,14 @@
     padding: 10px;
     margin-bottom: 30px;
     font-family: "makinas-4-square";
-    width: 48%;
+    width: 100%;
+}
+.each-circle:hover{
+    opacity:0.5;
+}
+.circle-images{
+    max-width: 300px;
+    margin:0 auto;
 }
 .circle-main{
     position: relative;
@@ -48,7 +55,7 @@
     background: #da3e50;
 }
 
-/* .meta-button{
+.meta-button{
     display: block;
     font-size: 1.2rem;
     color: unset;
@@ -57,8 +64,8 @@
     border-radius: 15px;
     padding: 10px;
     font-family: "makinas-4-square";
-} */
-/* .circle-location .meta-loc{
+}
+.circle-location .meta-loc{
     display: block;
     margin-right: 40px;
     font-size: 1.5rem;
@@ -75,7 +82,7 @@
     justify-content: center;
     align-items: center;
     font-family: "makinas-4-square";
-} */
+}
 .circle-text{
     margin: 10px 0;
     font-family: "makinas-4-square";
@@ -127,4 +134,8 @@
     height: 6px;
     -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
+}
+.circle-list a{
+display:block;
+width: 48%;
 }
