--- a/public/assets/css/timetable.css
+++ b/public/assets/css/timetable.css
@@ -76,11 +76,12 @@
   font-size: 20px;
   height:80px;
   width:143px;
-  border-radius: 30px;
+  /* border-radius: 30px; */
   font-weight: bolder;
   font-family: "makinas-4-square";
   z-index: 2;
   color: whitesmoke;
+  background-color: rgba(11,11,11,0.5);
 }
 .positionsticky{
   position: sticky;
@@ -97,11 +98,12 @@
 .time-nonl{
   height:60px;
   width: 50px;
-
+  background-color: rgba(11,11,11,0.5);
 }
 .time-nonr{
   height:60px;
   width: 50px;
+  background-color: rgba(11,11,11,0.5);
 }
 .time-table td{
   height: 30px;
