--- a/views/buturibu.erb
+++ b/views/buturibu.erb
@@ -13,15 +13,14 @@
       <div class="circle-images">
          <img src="/assets/images/circle/buturi.png" alt="物理部">
       </div>
-      <h1 class="circle-name">
+      <p class="circle-name">
         物理部
-      </h1>
-      <div class="circle-location">
+      </p>
+      <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">生物講義室</span>
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
-   <p class="circle-text">今年の物理部では主に模造紙による研究や実験などの発表を行います。ぜひ物理講義室へ来て、物理を楽しんで欲しいです！</p>
-
+     <p class="circle-text">今年の物理部では主に模造紙による研究や実験などの発表を行います。ぜひ物理講義室へ来て、物理を楽しんで欲しいです！</p>
 </div>
