--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -133,3 +133,60 @@ footer{
   text-align: center;
   font-size: 12px;
 }
+/* ハンバーガーメニュー */
+#humMenu {
+  padding: 12px;
+  background: white;
+  display: none;
+}
+#humCheck, #humClose { display:none; }
+#humOpen {
+  display: block;
+  width: 58px;
+  cursor: pointer;
+}
+#humOpen:hover {
+  opacity: 0.5;
+}
+#humOpen img { display: block; }
+#humClose, nav {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+}
+#humClose {
+  z-index: 2;
+  width: 100%;
+  background: gray;
+  opacity: 0.8;
+  transition: 0.5s;
+}
+.hannba-nav {
+  z-index: 3;
+  width: 330px;
+  background: white;
+  transition: 0.5s;
+  transform: translateX(-100%);
+}
+#humCheck:checked ~ #humClose { display: block; }
+#humCheck:checked ~ nav {
+  transform: translateX(0);
+}
+.hannba-inner{
+overflow: hidden;
+list-style: none;
+}
+.hannba-li{
+  padding: 15px 0;
+  margin: 10px 0;
+}
+.hannba-li:hover{
+  opacity: 0.5;
+}
+nav li a{
+  font-size: 20px;
+  text-decoration: none;
+  color: black;
+}
+/* ここまで */
