--- a/views/layout.erb
+++ b/views/layout.erb
@@ -37,7 +37,24 @@
           </ul>
       </nav>
       
-      
+      <div id="humMenu">
+      <input id="humCheck" type="checkbox">
+      <label id="humOpen" for="humCheck"><img src="/assets/images/hannbaga.png" alt="メニュー" width="100" height="100"></label>
+      <label id="humClose" for="humCheck"></label>
+      <nav class="hannba-nav">
+        <ul class="hannba-inner">
+          <li class="hannba-li"><a href="/index" class="hannba-a">Home</a></li>
+          <li class="hannba-li"><a href="/message" class="hannba-a">Message</a></li>
+          <li class="hannba-li"><a href="/access" class="hannba-a">Access</a></li>
+          <li class="hannba-li"><a href="/map" class="hannba-a">Map</a></li>
+          <li class="hannba-li"><a href="/timetable" class="hannba-a">Timetable</a></li>
+          <li class="hannba-li"><a href="/circle" class="hannba-a">Circles</a></li>
+          <li class="hannba-li"><a href="/member" class="hannba-a">Members</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    
         <div class="yield-main">
           <%= yield %>
         <footer>
