--- a/views/circle.erb
+++ b/views/circle.erb
@@ -4,7 +4,7 @@
 <div class="circle-main">
     <ul class="circle-list">
         <a href="/pcdoukoukai"><li class="each-circle">
-            <h3 class="circle_p_name"><span>D-1</span>PC同好会
+            <h3 class="circle_p_name green"><span>D-1</span>PC同好会
             </h3>
             <div class="circle-bot">
             <p>
@@ -24,7 +24,7 @@
         </li>
         </a>
         <a href="/pcdoukoukai"><li class="each-circle">
-            <h3 class="circle_p_name"><span>D-1</span>PC同好会
+            <h3 class="circle_p_name green"><span>D-1</span>PC同好会
             </h3>
             <div class="circle-bot">
             <p>
@@ -44,7 +44,7 @@
         </li>
         </a>
         <a href="/ongakukai"><li class="each-circle">
-            <h3 class="circle_p_name"><span>D-1</span>音楽会
+            <h3 class="circle_p_name"><span>A-1</span>音楽会
             </h3>
             <div class="circle-bot">
             <p>
@@ -63,12 +63,12 @@
             </div>
         </li>
         </a>
-        <a href="/pcdoukoukai"><li class="each-circle">
-            <h3 class="circle_p_name"><span>D-1</span>PC同好会
+        <a href="/ennniti"><li class="each-circle">
+            <h3 class="circle_p_name"><span>A-2</span>縁日
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/pc.png" class="circle-img">
+              <img src="/assets/images/circle/ennniti.png" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -76,19 +76,19 @@
                 サークルメンバー
               </div>
               <li>
-                <p class="daiya"></p><p class="member-name">pc同好会一同</p>
+                <p class="daiya"></p><p class="member-name">縁日</p>
               </li>
             </ul>
             </div>
             </div>
         </li>
         </a>
-        <a href="/pcdoukoukai"><li class="each-circle">
-            <h3 class="circle_p_name"><span>D-1</span>PC同好会
+        <a href="/koukounyuusi"><li class="each-circle">
+            <h3 class="circle_p_name"><span>A-3</span>高校入試
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/pc.png" class="circle-img">
+              <img src="/assets/images/circle/koukou.png" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
@@ -96,7 +96,7 @@
                 サークルメンバー
               </div>
               <li>
-                <p class="daiya"></p><p class="member-name">pc同好会一同</p>
+                <p class="daiya"></p><p class="member-name">高校入試</p>
               </li>
             </ul>
             </div>
