--- a/views/dassyutu.erb
+++ b/views/dassyutu.erb
@@ -18,7 +18,7 @@
       </h1>
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
-         <span class="meta-loc">2-b,2-a</span>
+         <span class="meta-loc">2-A,2-B</span>
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
