--- a/views/koukounyuusi.erb
+++ b/views/koukounyuusi.erb
@@ -16,7 +16,7 @@
       <h1 class="circle-name">
         高校入試
       </h1>
-      <div class="circle-location">
+      <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc"></span>
          <a class="meta-button">マップ上で確認</a>
