--- a/views/shougibu.erb
+++ b/views/shougibu.erb
@@ -15,7 +15,7 @@
       <h1 class="circle-name">
         将棋部
       </h1>
-      <div class="circle-location">
+      <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">日本史教室</span>
          <a class="meta-button">マップ上で確認</a>
