--- a/views/shasinnbu.erb
+++ b/views/shasinnbu.erb
@@ -11,19 +11,18 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/seibutu.png" alt="写真部">
+         <img src="/assets/images/circle/shashinn.png" alt="写真部">
       </div>
       <h1 class="circle-name">
         写真部
       </h1>
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
-         <span class="meta-loc">生物室室</span>
+         <span class="meta-loc">2-C</span>
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
-   <p class="circle-text">「写真部では体育祭、修学旅行など学校行事の写真や、各々が撮影した写真などを展示しています。
-また、今年は教室からの大阪湾を一望できる景色を撮影したタイムラプスも放映しています。
-是非お越しください。」</p>
+   <p class="circle-text">写真部では体育祭、修学旅行など学校行事の写真や、各々が撮影した写真などを展示しています。また、今年は教室からの大阪湾を一望できる景色を撮影したタイムラプスも放映しています。
+是非お越しください。</p>
 
 </div>
