--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -28,6 +28,7 @@
         <table class="time-table">
           <tr>
             <th class="time-nonl positionsticky"></th>
+            <td class="time-title positionstickly">物理講義室</td>
             <td class="time-title positionsticky" >講堂</td>
             <td class="time-title positionsticky">中央<br>ステージ</td>
             <td class="time-title positionsticky">バンド</td>
@@ -40,6 +41,7 @@
           <!-- 9:00 -->
           <tr class="clearfix">
             <th rowspan="12" class="time-timel">9:00</th>
+            <td></td>
             <td rowspan="8" class="time-event-left">
               <span class="time-start">9:00~</span>
               個人演奏１
@@ -60,13 +62,6 @@
             <td></td>
             <td></td>
             <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
             <td></td>
           </tr>
           <tr>
@@ -76,6 +71,16 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
             <td></td>
@@ -84,8 +89,10 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -95,6 +102,7 @@
           </tr>
           <!-- 9:30 -->
           <tr>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -112,16 +120,19 @@
             <td></td>
             <td></td>
             <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
             <td></td>
           </tr>
           <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
             <td rowspan="5" class="time-event-left">
               <span class="time-start">9:45~</span>
               <span class="time-end">~10:00</span>
@@ -138,8 +149,10 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -154,6 +167,7 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
             <th rowspan="12" class="time-timer">10:00</th>
           </tr>
           <tr>
@@ -162,17 +176,20 @@
             <td></td>
             <td></td>
             <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
             <td></td>
           </tr>
           <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
             <td rowspan="9" class="time-event-left">
               <span class="time-start">10:15~</span>
               <span class="time-end">~11:00</span>
@@ -189,6 +206,7 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
             <td rowspan="4" class="time-event">
               <span class="time-start">10:20~</span>
               <span class="time-end">~10:40</span>
@@ -196,6 +214,7 @@
             <td></td>
           </tr>
           <tr>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -209,12 +228,6 @@
             <td></td>
             <td></td>
             <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
             <td></td>
           </tr>
           <tr>
@@ -232,6 +245,16 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
             <td></td>
@@ -240,8 +263,10 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -252,6 +277,7 @@
           <!-- 11:00 -->
           <tr>
             <th rowspan="12" class="time-timel">11:00</th>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -268,6 +294,7 @@
             <th rowspan="12" class="time-timer">11:00</th>
           </tr>
           <tr>
+            <td></td>
             <td rowspan="6" class="time-event-left">
               <span class="time-start">11:05~</span>
               <span class="time-end">~11:35</span>
@@ -282,11 +309,6 @@
             <td></td>
             <td></td>
             <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
             <td></td>
           </tr>
           <tr>
@@ -297,6 +319,15 @@
             <td></td>
           </tr>
           <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -305,6 +336,7 @@
           </tr>
           <!-- 11:30 -->
           <tr>
+            <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">11:30~</span>
               <span class="time-end">~11:40</span>
@@ -322,8 +354,10 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
+            <td></td>
             <td rowspan="7" class="time-event-left">
               <span class="time-start">11:40~</span>
               <span class="time-end">~12:15</span>
@@ -342,8 +376,10 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
+            <td></td>
             <td rowspan="4" class="time-event"><span class="time-start">11:50~</span>マジック<span class="time-end">~12:10</span></td>
             <td></td>
             <td></td>
@@ -355,6 +391,7 @@
             <td></td>
           </tr>
           <tr>
+            <td></td>
             <td rowspan="5" class="time-event">
               <span class="time-start">11:55~</span>
               Chikuwa
@@ -368,6 +405,7 @@
           <tr>
             <th rowspan="12" class="time-timel">12:00</th>
             <td></td>
+            <td></td>
             <td rowspan="4" class="time-event">
               <span class="time-start">12:00~</span>
               <span class="time-end">~12:20</span>
@@ -377,9 +415,6 @@
           </tr>
           <tr>
             <td></td>
-          </tr>
-          <tr>
-            <td></td>
             <td></td>
           </tr>
           <tr>
@@ -388,6 +423,13 @@
             <td></td>
           </tr>
           <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
             <td rowspan="4" class="time-event-left">
               <span class="time-start">12:20~</span>
               <span class="time-end">~12:40</span>
@@ -398,6 +440,7 @@
             <td></td>
           </tr>
           <tr>
+            <td></td>
             <td></td>
             <td class="time-event">
               <span class="time-start">12:25~</span>
@@ -413,8 +456,10 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
+            <td></td>
             <td></td>
             <td rowspan="4" class="time-event">
               <span class="time-start">12:35~</span>
@@ -428,6 +473,7 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
             <td rowspan="8" class="time-event">
               <span class="time-start">12:40~</span>
               <span class="time-end">~13:20</span>
@@ -438,6 +484,7 @@
               とある<br>秘密倉庫からの脱出<br>4</td>
           </tr>
           <tr>
+            <td></td>
             <td rowspan="4" class="time-event-left">
               <span class="time-start">12:45~</span>
               <span class="time-end">~13:05</span>
@@ -452,8 +499,10 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -462,6 +511,7 @@
           <!-- 13:00 -->
           <tr>
             <th rowspan="12" class="time-timel">13:00</th>
+            <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">13:00~</span>
               <span class="time-end">~13:10</span>
@@ -478,8 +528,10 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
+            <td></td>
             <td></td>
             <td rowspan="4" class="time-event">
               <span class="time-start">13:10~</span>
@@ -496,8 +548,10 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
+            <td></td>
             <td rowspan="3" class="time-event-left">
               <span class="time-start">13:20~</span>
               <span class="time-end">~13:35</span>
@@ -516,9 +570,11 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <!-- 13:30 -->
           <tr>
+            <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">13:30~</span>
               <span class="time-end">~13:40</span>
@@ -528,8 +584,13 @@
             <td rowspan="8" class="time-event">
               <span class="time-start">13:30~</span>
               <span class="time-end">~14:10</span>
-              連続爆破事件<br>からの脱出<br>5</td>
-            <td></td>
+              連続爆破事件<br>からの脱出<br>5
+            </td>
+            <td rowspan="12" class="time-event">
+              <span class="time-start">13:30~</span>
+              <span class="time-end">~14:30</span>
+              ESS
+            </td>
           </tr>
           <tr>
             <td></td>
@@ -538,11 +599,11 @@
             <td></td>
           </tr>
           <tr>
+            <td></td>
             <td rowspan="4" class="time-event-left">
               <span class="time-start">13:40~</span>
               <span class="time-end">~14:00</span>
               表彰式</td>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -573,6 +634,7 @@
           <tr>
             <th rowspan="12" class="time-timel time-bot">14:00</th>
             <td></td>
+            <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">14:00~</span>
               <span class="time-end">~14:10</span>
@@ -583,7 +645,6 @@
               <span class="time-start">14:00~</span>
               <span class="time-end">~14:20</span>
               とある<br>秘密倉庫からの脱出<br>6</td>
-            <td></td>
             <th rowspan="12" class="time-timer time-bot">14:00</th>
           </tr>
           <tr>
@@ -594,6 +655,7 @@
           </tr>
           <tr>
             <td></td>
+            <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">14:10~</span>
               <span class="time-end">~14:20</span>
@@ -601,7 +663,6 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
             <td></td>
@@ -611,6 +672,7 @@
             <td></td>
           </tr>
           <tr>
+            <td></td>
             <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">14:20~</span>
@@ -623,7 +685,6 @@
               <span class="time-end">~15:00</span>
               連続爆破事件<br>からの脱出<br>6</td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
             <td></td>
@@ -634,6 +695,7 @@
           </tr>
           <!-- 14:30 -->
           <tr>
+            <td></td>
             <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">14:30~</span>
@@ -650,8 +712,10 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -668,15 +732,18 @@
             <td></td>
             <td></td>
             <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
             <td></td>
           </tr>
           <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
