--- a/views/annnai.erb
+++ b/views/annnai.erb
@@ -18,7 +18,7 @@
       </h1>
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
-         <span class="meta-loc"></span>
+         <span class="meta-loc">校内全体</span>
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
