--- a/views/kissa.erb
+++ b/views/kissa.erb
@@ -18,7 +18,7 @@
       </h1>
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
-         <span class="meta-loc">3-B</span>
+         <span class="meta-loc">3-B,3-C</span>
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
