--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -190,3 +190,11 @@ nav li a{
   color: black;
 }
 /* ここまで */
+.coming{
+  display: block;
+  font-size:10rem;
+  margin:0 auto;
+  color:white;
+  font-family: "makinas-4-square";
+  padding:5rem 0;
+}
