--- a/views/index.erb
+++ b/views/index.erb
@@ -11,10 +11,10 @@
     <script src="/assets/javascript/javascript.js"></script>
     <div id="wrapper">
       <div class="toptitle">
-        <span class="seventy-six">第76回</span>
-        <span class="school-name">甲陽学院高等学校</span>
-        <span class="event-title">「音楽と展覧の会」</span>
-        <span class="event-theme">" New ERA "</span>
+        <p>第76回</p>
+        <p>甲陽学院高等学校</p>
+        <p>「音楽と展覧の会」</p>
+        <p>New ERA</p>
       </div>
       <div class="image">
         <img src="/assets/images/logo_white.webp" class="logo">
