--- a/views/layout.erb
+++ b/views/layout.erb
@@ -59,12 +59,12 @@
           <%= yield %>
         <footer>
             <img src="/assets/images/footer2.webp" class="footer-logo">
-            <div id="footer-title">第76回 音楽と展覧の会 "NewERA"</div>
+            <div id="footer-title">第76回 音楽と展覧の会 "New ERA"</div>
             <div class="footer-icon">
-                <a class="icon"><i class="fab fa-twitter fa-4x snsicon" href="https://x.com/koyo_onten2023?s=20"></i>
+                <a href="https://twitter.com/koyo_onten2023?s=21&t=cGq-MroAXlsBhwLM7vG1lA" class="icon"><i class="fab fa-twitter fa-4x snsicon" href="https://x.com/koyo_onten2023?s=20"></i>
                   <span class="sns-link-text">@koyo_onten2023</span>
                 </a>
-                <a class="icon"><i class="fab fa-instagram fa-4x snsicon" href=""></i>
+                <a href="https://instagram.com/koyo_onten?igshid=MzMyNGUyNmU2YQ==" class="icon"><i class="fab fa-instagram fa-4x snsicon" href=""></i>
                   <span class="sns-link-text">koyo.school.fes2023</span>
                 </a>
             </div>
