--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -55,25 +55,20 @@ html,body{
 }
 
 .toptitle{
-  height: 250px;
-  margin: 0 auto;
-  padding-top: 10px;
-  font-weight: 700;
+  text-align: center;
+  font-weight: 800;
   color: #fff;
-  text-align: justify;
   width:70%;
-  text-align-last: justify;
-  
+  margin:0 auto;
+  padding-top:30px;
 }
 
-.seventy-six{
-  display: block;
-  padding: 0 41%;
-  line-height: 6vh;
-  margin: 0 auto;
+.toptitle p{
+  line-height: 5vh;
   font-family: "makinas-4-square";
   font-size: 37px;
   margin-top: 4px;
+  letter-spacing: 0.1em
 }
 
 .school-name{
