--- a/views/tetudoudoukoukai.erb
+++ b/views/tetudoudoukoukai.erb
@@ -17,7 +17,7 @@
         鉄道同好会
       </h1>
       <div class="circles-location">
-         <span class="meta-title">開催場所：</span>
+         <span class="meta-title">開催場所：2-C</span>
          <span class="meta-loc"></span>
          <a class="meta-button">マップ上で確認</a>
       </div>
